# tokentoll

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  prs.md  pyproject.toml  todo.md
.github/workflows/: ci.yml  dogfood.yml  update-pricing.yml
scripts/marketing/: blog_speed_build.md  devto_article.md  hn_post.md  issue_instructor.md  issue_langchain.md  issue_litellm.md  linkedin_post.md  reddit_devops.md  reddit_mlops.md  reddit_python.md  tweets.md
src/tokentoll/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  tokenizer.py
src/tokentoll/core/: models.py  pipeline.py
src/tokentoll/detectors/: anthropic_detector.py  base.py  google_detector.py  langchain_detector.py  litellm_detector.py  openai_detector.py  registry.py  zhipu_detector.py
src/tokentoll/diff/: engine.py  git.py
src/tokentoll/output/: json_output.py  markdown.py  table.py
src/tokentoll/pricing/: engine.py  updater.py
src/tokentoll/pricing/data/: model_prices.json
src/tokentoll/scanner/: python_scanner.py
tests/: test_config.py  test_diff.py  test_integration.py  test_pricing.py  test_tokenizer.py
tests/fixtures/python/: multi_provider.py  openai_basic.py
tests/test_detectors/: test_anthropic.py  test_google.py  test_langchain.py  test_litellm.py  test_openai.py  test_zhipu.py
